<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/data_penduduk"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:hint="@string/masukan_nama_lengkap"
        android:inputType="textPersonName|textCapWords"
        android:nextFocusDown="@id/email"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/NIK"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/NIK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:hint="@string/nik"
        android:inputType="number"
        android:autofillHints="" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:padding="15dp"/>
    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:checkedButton="@id/laki">


        <RadioButton
            android:id="@+id/laki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laki_laki"/>

        <RadioButton
            android:id="@+id/perem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perempuan"/>

    </RadioGroup>

    <EditText
        android:id="@+id/TTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:hint="@string/ttl"
        android:inputType="text"
        android:nextFocusDown="@id/alamat"
        android:autofillHints="" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textCapWords"
        android:hint="@string/alamat"
        android:nextFocusDown="@id/telpon"
        android:autofillHints="" />

    <EditText
        android:id="@+id/telpon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:autofillHints="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:text="@string/submit"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="Submit"/>
    </RelativeLayout>










</LinearLayout>